# magic-mouse-gnome

./: LICENSE  README.md  install.sh  magic_mouse_gestures.py  pyproject.toml  uninstall.sh
modprobe/: hid-magicmouse.conf
systemd/: magic-mouse-gnome.service
udev/: 99-magic-mouse.rules
